--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,17 @@
 header{
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
-    color: red;
-    height: 100px;
+    width: 99%;
+    height: auto;
     font-size: 22px;
     text-align: center;
+    border: 3px solid red;
     
 }
 
 
 .allpage{
-    margin-top: 110px;
+    margin-top: 150px;
     width: 100%;
 }
 
@@ -120,4 +119,38 @@ li{
 .paragraforelato{
     text-align: center;
     font-size: 18px;
+}
+
+.tabela{
+    width: 100%;
+}
+
+table{
+    text-align: center;
+    border: 1px solid red;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 300px;
+    height: 150px;
+    box-shadow: 0 0 10px 0;
+}
+
+th{
+    border: 1px solid red;
+    font-size: 25px;
+    height: 50px;
+}
+
+td{
+    border: 1px solid red;
+    font-size: 20px;
+}
+
+footer{
+    width: auto;
+    text-align: center;
+    border: 3px solid red;
+    margin-top: 20px;
+    font-size: 22px;
 }
