--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,13 @@
 header{
     position: fixed;
     top: 0;
-    width: 99%;
+    width: 100%;
     height: auto;
     font-size: 22px;
     text-align: center;
     border: 3px solid red;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
